<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:alpha="0.8"
    android:background="@drawable/about"
    android:backgroundTint="@color/navy_blue"
    android:backgroundTintMode="multiply">
    <TextView
        android:id="@+id/Name_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/datasource_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/data_prov"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name_about" />
    <TextView
        android:id="@+id/link_about"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="57dp"
        android:gravity="center_horizontal"
        android:onClick="onClickAPI_about"
        android:text="@string/api_text"
        android:textColor="@color/white"
        android:textSize="37sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datasource_about" />
    <TextView
        android:id="@+id/AuthorName_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="32dp"
        android:text="@string/author"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/Version"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/version"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>